--- a/index.html
+++ b/index.html
@@ -1,52 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Portfolio</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f1f1f1;
-      margin: 0;
-      padding: 20px;
-      text-align: center;
-    }
-
-    h1 {
-      color: #333;
-      font-size: 36px;
-    }
-
-    p {
-      color: #666;
-      font-size: 18px;
-      line-height: 1.6;
-    }
-
-    a {
-      color: #007bff;
-      text-decoration: none;
-    }
-
-    button {
-      background-color: #007bff;
-      color: #fff;
-      padding: 10px 20px;
-      border: none;
-      border-radius: 5px;
-      font-size: 16px;
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css">
+  <title>My Awesome Project</title>
 </head>
-<body>
-  <h1>Welcome to My Portfolio</h1>
-  <p>Thank you for visiting my landing page.</p>
-  <p>Feel free to explore my projects and get to know more about me.</p>
-  <p>Check out my GitHub profile for more details:</p>
-  <a href="https://github.com/gideonbotchway">GitHub</a>
 
-  <h2>My Projects</h2>
-  <button>Click Me</button>
-</body>
-</html>
+<body>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="#intro">Intro</a></li>
+        <li><a href="#features">Features</a></li>
+        <li><a href="#about">About</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <section id="intro">
+    <div class="cover-image">
+      <img src="https://img.freepik.com/free-vector/technology-with-network-landing-page-with-photo_23-2148272078.jpg?w=900&t=st=1686275529~exp=1686276129~hmac=fc1449b5a019ecaa4ad18850095caf84957eebf7c0cee93f26310ce6a02c2a18" alt="Cover Image">
+    </div>
+    <h1>My Awesome Project</h1>
+    <p>A revolutionary web application that solves everyday problems with ease.</p>
+    <a href="https://gideonbotchway.github.io/" class="button">Try it Now</a>
+  </section>
+
+  <section id="features">
+    <div class="feature">
+      <img src="https://img.freepik.com/premium-vector/responsive-web-design_24877-34036.jpg?w=826" alt="Responsive Design">
+      <h2>Responsive Design</h2>
+      <p>Experience a seamless user interface across all devices and screen sizes.</p>
+    </div>
+    <div class="feature">
+      <img src="https://img.freepik.com/free-photo/office-employee-analyzing-business-charts-computer-documents-looking-online-research-data-create-presentation-working-with-information-report-statistics-pc_482257-51736.jpg?w=826&t=st=1686275687~exp=1686276287~hmac=689f0e052cd22d0862ae20130042d4b4be9c11d6fe671281b5b4a1cbd91c5217" alt="Data Visualization">
+      <h2>Data Visualization</h2>
+      <p>Visualize complex data sets in stunning charts and graphs for better insights.</p>
+    </div>
+    <div class="feature">
+      <img src="https://img.freepik.com/free-photo/woman-scanning-fingerprint-with-futuristic-interface-smart-technology_53876-102333.jpg?w=826&t=st=1686275812~exp=1686276412~hmac=4ac941fa6abab6109611e69df34c243dfe6b3bb8ceb412f00b774032c57667db" alt="User Authentication">
+      <h2>User Authentication</h2>
+      <p>Securely access personalized features and protect your data with our robust authentication system.</p>
+    </div>
+  </section>
+
+ <section id="about">
+    <h2>About</h2>
+    <p>This project was inspired by my passion for simplifying everyday tasks and providing innovative solutions. It is a portfolio project for Holberton School, where I honed my skills in web development.</p>
+    <p>Connect with me:</p>
+    <ul>
+      <li><a href="https://www.linkedin.com/in/gideonbotchway">LinkedIn</a></li>
+      <li><a href="https://github.com/gideonbotchway">GitHub</a></li>
+      <li><a href="https://twitter.com/@botchway_gideon">Twitter</a></li>
+    </ul>
+    <p>GitHub Repository: <a href="https://github.com/gideonbotchway/my-awesome-project">https://github.com/gideonbotchway/my-awesome-project</a></p>
+  </section>
